enabled pattern matching in switch preview feature and expanded test